--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Master title</title>
 </head>
 <body>
      <header>
         <h1>Header</h1>
     </header>
+    <aside>
+        <h3>aside</h3>
+    </aside>
 </body>
 </html>
